--- a/src/main/resources/fxml/panels/situations.fxml
+++ b/src/main/resources/fxml/panels/situations.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -23,12 +24,12 @@
                 </HBox>
                 <ScrollPane>
                     <content>
-                  <AnchorPane>
-                     <children>
-                              <TableView fx:id="table" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                        </TableView>
-                     </children>
-                  </AnchorPane>
+                        <AnchorPane>
+                            <children>
+                                <TableView fx:id="table" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                </TableView>
+                            </children>
+                        </AnchorPane>
                     </content>
                 </ScrollPane>
             </children>
