--- a/src/main/resources/fxml/situationedit.fxml
+++ b/src/main/resources/fxml/situationedit.fxml
@@ -1,11 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import org.controlsfx.control.CheckComboBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1">
-    
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="535.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bunjlabs.medicineapp.controllers.situations.SituationEditController">
+    <children>
+        <GridPane hgap="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="291.0" minWidth="10.0" prefWidth="134.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="478.0" minWidth="10.0" prefWidth="396.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <Label text="Диагноз" GridPane.halignment="RIGHT" />
+                <Label text="ФИО" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                <Label text="Возраст" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+                <Label text="Рост" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+                <Label text="Вес" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
+                <Label text="План лечения" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
+                <Label text="Соп. факторы" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
+                <Label text="Соп. заболевания" GridPane.halignment="RIGHT" GridPane.rowIndex="7" />
+                <Label text="Особенности" GridPane.halignment="RIGHT" GridPane.rowIndex="8" />
+                <TextField fx:id="deseaseField" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+                <TextField fx:id="fioField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <TextField fx:id="ageField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <TextField fx:id="growthField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <TextField fx:id="weightField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                <TextField fx:id="planField" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+                <TextField fx:id="factorsField" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+                <TextField fx:id="coDeseasesField" GridPane.columnIndex="1" GridPane.rowIndex="7"/>
+                <TextField fx:id="specialsField" GridPane.columnIndex="1" GridPane.rowIndex="8"/>
+                <HBox alignment="TOP_RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="9">
+                    <children>
+                        <Button mnemonicParsing="false" onAction="#handleSave" text="Сохранить" />
+                    </children>
+                    <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                    </padding>
+                </HBox>
+            </children>
+        </GridPane>
+    </children>
 </AnchorPane>
