--- a/src/main/resources/fxml/panels/situations.fxml
+++ b/src/main/resources/fxml/panels/situations.fxml
@@ -4,15 +4,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bunjlabs.medicineapp.controllers.situations.SituationController">
     <children>
-        <VBox>
+        <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
                 <HBox alignment="TOP_RIGHT">
                     <children>
@@ -22,7 +20,7 @@
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                     </padding>
                 </HBox>
-                <ScrollPane>
+                <ScrollPane fitToWidth="true">
                     <content>
                         <AnchorPane>
                             <children>
