--- a/src/main/resources/fxml/standartedit.fxml
+++ b/src/main/resources/fxml/standartedit.fxml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import org.controlsfx.control.CheckComboBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bunjlabs.medicineapp.controllers.standarts.StandartEditController">
+<AnchorPane id="AnchorPane" prefHeight="99.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.65" fx:controller="com.bunjlabs.medicineapp.controllers.standarts.StandartEditController">
     <children>
         <GridPane hgap="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columnConstraints>
@@ -21,13 +20,15 @@
             <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints />
+            <RowConstraints />
             </rowConstraints>
             <children>
                 <Label text="Диагноз" GridPane.halignment="RIGHT" />
-                <Label text="Препараты" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
-                <TextField fx:id="deseaseField" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+                <Label text="Препараты" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                <TextField fx:id="deseaseField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
                 <TextField fx:id="medicinesField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                <HBox alignment="TOP_RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="9">
+                <HBox alignment="TOP_RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="3">
                     <children>
                         <Button mnemonicParsing="false" onAction="#handleSave" text="Сохранить" />
                     </children>
