--- a/src/main/resources/fxml/situationedit.fxml
+++ b/src/main/resources/fxml/situationedit.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -27,7 +28,8 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints />
             </rowConstraints>
             <children>
                 <Label text="Диагноз" GridPane.halignment="RIGHT" />
@@ -35,20 +37,22 @@
                 <Label text="Возраст" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
                 <Label text="Рост" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
                 <Label text="Вес" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
-                <Label text="План лечения" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
-                <Label text="Соп. факторы" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
-                <Label text="Соп. заболевания" GridPane.halignment="RIGHT" GridPane.rowIndex="7" />
-                <Label text="Особенности" GridPane.halignment="RIGHT" GridPane.rowIndex="8" />
+                <Label text="Пол" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
+                <Label text="План лечения" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
+                <Label text="Соп. факторы" GridPane.halignment="RIGHT" GridPane.rowIndex="7" />
+                <Label text="Соп. заболевания" GridPane.halignment="RIGHT" GridPane.rowIndex="8" />
+                <Label text="Особенности" GridPane.halignment="RIGHT" GridPane.rowIndex="9" />
                 <TextField fx:id="deseaseField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
                 <TextField fx:id="fioField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                 <TextField fx:id="ageField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                 <TextField fx:id="growthField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                 <TextField fx:id="weightField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                <TextField fx:id="planField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                <TextField fx:id="factorsField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                <TextField fx:id="coDeseasesField" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                <TextField fx:id="specialsField" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-                <HBox alignment="TOP_RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="9">
+                <ChoiceBox fx:id="sexField" prefHeight="26.0" prefWidth="502.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                <TextField fx:id="planField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                <TextField fx:id="factorsField" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                <TextField fx:id="coDeseasesField" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                <TextField fx:id="specialsField" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+                <HBox alignment="TOP_RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="10">
                     <children>
                         <Button mnemonicParsing="false" onAction="#handleSave" text="Сохранить" />
                     </children>
